--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,17 +1,17 @@
 PROJ_NAME = cal
-SRC= src/main.c src/cal.c src/test_cal.c src/unity.c
-
+SRC =  src/main.c src/cal.c src/test_cal.c src/unity.c
+TEST_SRC_MAIN = src/test_main.c src/cal.c src/test_cal.c src/unity.c
 
 ifdef OS
-   RM = del 
-   FixPath = $(subst /,\,$1)
-   EXEC = exe
+	RM = del 
+	FixPath = $(subst /,\,$1)
+	EXEC = exe
 else
-   ifeq ($(shell uname), Linux)
-      RM = rm -rf
-      FixPath = $1
+	ifeq ($(shell uname), Linux)
+		RM = rm -rf
+		FixPath = $1
 	  EXEC = out
-   endif
+	endif
 endif
 
 
@@ -20,6 +20,17 @@ Build : $(SRC)
 	gcc $(SRC) -Iinc -o  $(call FixPath,$(PROJ_NAME).$(EXEC)) -lm
 
 Run : Build
+	./$(call FixPath,$(PROJ_NAME).$(EXEC)) 
+	 
+Static_analysis:
+	cppcheck --enable=all $(SRC)
+
+dynamic_analysis: Build
+	valgrind ./$(call FixPath,$(PROJ_NAME).$(EXEC)) 
+
+	
+Test : $(TEST_SRC-MAIN)
+	gcc $(TEST_SRC_MAIN) -Iinc -o  $(call FixPath,$(PROJ_NAME).$(EXEC)) -lm
 	./$(call FixPath,$(PROJ_NAME).$(EXEC)) 
 
 Clean :
