--- a/.github/workflows/static-check.yml
+++ b/.github/workflows/static-check.yml
@@ -18,6 +18,6 @@ jobs:
     - name: make
       run: make
     - name: make check
-      run: cppcheck --enable=all 3_Implementation
+      run: sudo apt-get install cppcheck 
     - name: make distcheck
       run: make distcheck
