--- a/.github/workflows/static-check.yml
+++ b/.github/workflows/static-check.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: analysis
+      run: sudo apt-get install cppcheck 
     - name: static analysis
       run: cppcheck --enable=all 3_Implementation
     
